--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-svg": "^12.1.0",
+    "react-native-table-component": "^1.2.1",
     "react-native-text-ticker": "^1.10.0",
     "react-native-web": "~0.13.12"
   },
