--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-svg": "^12.1.0",
     "react-native-table-component": "^1.2.1",
     "react-native-text-ticker": "^1.10.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-location": "~10.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
